User registration and authentication.

--- a/DLivr/src/app/pages/mypackagesdriver/mypackagesdriver.page.html
+++ b/DLivr/src/app/pages/mypackagesdriver/mypackagesdriver.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button color="light"></ion-menu-button>
           </ion-buttons>
-      <ion-title>My packages</ion-title>
+      <ion-title>MY PACKAGES</ion-title>
     </ion-toolbar>
   </ion-header>
 
