--- a/DLivr/src/app/pages/home/home.page.scss
+++ b/DLivr/src/app/pages/home/home.page.scss
@@ -1,10 +1,11 @@
 ion-toolbar {
-    --ion-background-color:  rgb(53, 53, 53);
+    --ion-background-color:  rgb(46, 46, 46);
 }
 
 ion-title {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
     font-weight: bolder;
     color: gray;
 }
