--- a/DLivr/src/app/pages/homedriver/homedriver.page.html
+++ b/DLivr/src/app/pages/homedriver/homedriver.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button color="light"></ion-menu-button>
     </ion-buttons>
-    <ion-title>HOME</ion-title>
+    <ion-title>HOME - DRIVER</ion-title>
   </ion-toolbar>
 </ion-header>
 
