--- a/DLivr/src/app/pages/payment/payment.page.scss
+++ b/DLivr/src/app/pages/payment/payment.page.scss
@@ -1,7 +1,20 @@
 ion-toolbar {
-    --ion-background-color:  rgb(53, 53, 53);
+    --ion-background-color:  rgb(46, 46, 46);
 }
 
+ion-title {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-weight: bolder;
+    color: gray;
+}
+
+@media only screen and (max-width: 600px) {
+    ion-title {
+      padding-right: 15%;
+    }
+  }
 // ion-button{
 //     float: right;
 // }
