--- a/DLivr/src/app/pages/welcome/welcome.page.scss
+++ b/DLivr/src/app/pages/welcome/welcome.page.scss
@@ -1,230 +1,71 @@
 
-.backg{
-    width: 180%;
+#registerButton {
+    float:right;
+    --color: gray;
+    font-weight: 400;
+    --color-activated: white;
 }
-.ion-padding {
+
+#loginButton {
+    float:right;
+
+    font-weight: 500;
+    --border-radius: 2px;
+    width: 100px;
+    --opacity: 75%;
+    --padding-left:40px;
+    --padding-right:10px;
+    align-self: center;
+}
+
+#createAccountButton {
+    font-weight: 500;
+    --border-radius: 2px;
+    --padding-left:20px;
+    --padding-right:20px;
+    align-self: center;
+}
+
+#title {
     text-align: center;
-   // font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-   // font-style: bold;
-   // background-color: rgba(255, 255, 255, 0.932); /* For browsers that do not support gradients */
-    background-image: linear-gradient(to left, #ffffff2a, rgb(53, 53, 53));
-   // width: 0%;
-}
-.buton1{
-    margin-top: 10px;
-}
-
-$font:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-.title{
-    margin-top: 10px;
-    margin-left: 30px;
-    //line-height: 1em;
-    //text-align: left;
-    // width: 120%;
-	// background: linear-gradient(to right, rgb(255, 255, 255) 0%, #003cff 100%);
-	// -webkit-background-clip: text;
-	// -webkit-text-fill-color: transparent;
-	font: {
-		size: 2vw;
-		family: $font;
-    };
+    color: dodgerblue;
     font-weight: bolder;
-    color: gray;
-    float:left;
-}
-.divider{
-    width:20px;
-    height:auto;
-    display:inline-block;
+    padding: 25px 0px 10px 0px;
 }
 
-div {
-    padding: 0.4px;
-    display:inline-block;
-    width: 90%;
-  }
-
-.subtitle1{
-    line-height: 1.5em;
-    margin-left: 640px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bolder;
-    color: gray;
-}
-.subtitle2{
-    margin-left: 620px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bolder;
-    color: gray;
-   
-}
-.table {
-margin-left: 380px;
-margin-top: 100px;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: bolder;
-color: gray;
+#subtitle {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-weight: 300;
+    font-size: 16px;
+    padding: 0px 20px 20px 20px;
 }
 
-.msj{
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-color: gray;
-font-weight: bolder;
-margin-left: 490px;
-margin-top: 20px;
-}
-.footer1{
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-color: gray;
-font-weight: bolder;
-margin-left: 670px;
-}
-.button3{
-    margin-top: 20px;
-    margin-left: 660px;
-}
-
-.col{
-    border: 1px solid gray;
-    background-color: gray;
-    margin-top: 150px;
-    }
-
-.border1{
-    border: 1px solid gray;
-    width: 30%;
-    background-color: gray;
-    }
-
-.horizontal1{
-    border-bottom: 0.3px solid gray;
-    width: 10%;
-  //background-color: gray;
-    margin-top: 150px;
-    margin-left: 490px;
-    }
-.vertical1{
-    border-left: 1px solid gray;
-    height: 100px;
-    width: 20%;
-    margin-left: 0px;
-    margin-top: -100px;
-    }
-.horizontal2{
-    border-bottom: 0.3px solid gray;
-    width: 10%;
-  //background-color: gray;
-    margin-top: 150px;
-    margin-left: -555px;
-    }
-.vertical2{
-    border-left: 1px solid gray;
-    height: 100px;
-    width: 20%;
-    margin-left: -220px;
-    margin-bottom: -100px;
-    }
-
-  .firstCell{
-  margin-left: 15px;
-  margin-bottom: 10px;
-  width: 6%;
-  color: gray;
-  vertical-align: top;
-    }
-.secondCell{
-    height: 100%;
-    width: 100%;
-    margin-left: -290px;
-    margin-bottom: 100px;
-    color: gray;
-}
-.thirdCell{
-    width: 6%;
-  //background-color: gray;
-    margin-left: 15px;
+#footer {
+    text-align: center;
+    margin-top: 50px;
     margin-bottom: 10px;
     color: gray;
+    font-weight: 300px;
+    font-size: 12px;
 }
-.fourthCell{
-    height: 100px;
-    width: 20%;
-    margin-left: 40px;
-    margin-bottom:  -100px;
-    color: gray;
-    }
+#dlivr {
+    float:left;
+    width:40%;
+    height: 50px;
+    vertical-align: middle;
+    padding: 0;
+    margin: 0;
+}
 
-    @media only screen and (max-width: 600px) {
-        .backg {
-            width: 126%;
-        }
-        .title{
-            margin-top: 10px;
-            margin-left: 20px;
-            font-size: 6vw;
-        }
-        .buton1{
-            font-size: 10px;
-            margin-top: 4px;
-        }
-        .divider{
-            width:10px;
-        }
-        .subtitle1{
-            line-height: 0.5em;
-            margin-left:78px;
-            font-size: 6vw;
-        }
-        .subtitle2{
-            margin-left: 66px;
-            font-size: 5.5vw;
-            padding-bottom: 0%;
-        }
-        div {
-            width: 100%;
-          }
-          .col{
-            margin-top: 85px;
-            }
-        .horizontal1{
-            width: 30%;
-          //background-color: gray;
-            margin-top: 15px;
-            margin-left: 30px;
-            }
-        .vertical1{
-            height: 60px;
-            width: 20%;
-            margin-left: 0px;
-            margin-top: 15px;
-            }
-        .horizontal2{
-            border-bottom: 0.3px solid gray;
-            width: 30%;
-          //background-color: gray;
-            margin-top: 15px;
-            margin-left: -80px;
-            }
-        .vertical2{
-            border-left: 1px solid gray;
-            height: 60px;
-            width: 20%;
-            margin-left: -121px;
-            margin-bottom: -60px;
-            }
-        .msj{
-            margin-left: 10px;
-            margin-top: 15px;
-            font-size: 5vw;
-            width: 80%;
-            }
-        .button3{
-            margin-top: 15px;
-            margin-left: 60px;
-        }
-        .footer1{
-            margin-left: 70px;
-            font-size: 4.5vw;
-            }
-      }
+ion-toolbar {
+    --ion-background-color:  rgb(53, 53, 53);
+    height: 50px;
+}
+
+
+@media only screen and (max-width: 600px) {
+    ion-title {
+      padding-right: 15%;
+    }
+  }
